--- a/portfolio-react/public/index.html
+++ b/portfolio-react/public/index.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React Portfolio</title>
+    <title>Abuye Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
